force-app/main/default/objects/GymEvent__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>Month of the Year</description>
    <formula>Month(Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>