force-app/main/default/objects/GymEvent__c/fields/SwimType__c.field-meta.xml
<CustomField>
    <fullName>SwimType__c</fullName>
    <label>SwimType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pool 25m</fullName>
                <default>true</default>
                <label>Pool Lenght 25m</label>
            </value>
            <value>
                <fullName>Pool 50m</fullName>
                <label>Pool Lenght 50m</label>
            </value>
            <value>
                <fullName>Open Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>