force-app/main/default/objects/GymEvent__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Swimming</fullName>
                <default>true</default>
                <label>Swimming</label>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Cycling</fullName>
            </value>
            <value>
                <fullName>Workout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>