force-app/main/default/objects/GymEvent__c/recordTypes/Gym.recordType-meta.xml
<RecordType>
    <fullName>Gym</fullName>
    <active>true</active>
    <label>Gym</label>
</RecordType>