force-app/main/default/objects/GymEvent__c/recordTypes/Swim.recordType-meta.xml
<RecordType>
    <fullName>Swim</fullName>
    <active>true</active>
    <label>Swimming</label>
</RecordType>