force-app/main/default/objects/GymEvent__c/validationRules/CheckEventDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckEventDate</fullName>
    <active>true</active>
    <description>Event date can&#39;t be in the future</description>
    <errorConditionFormula>Date__c  &gt;  TODAY()</errorConditionFormula>
    <errorMessage>Event date can&#39;t be in the future</errorMessage>
</ValidationRule>