force-app/main/default/objects/GymEvent__c/listViews/All_GymEvent.listView-meta.xml
<ListView>
    <fullName>All_GymEvent</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Distance_m__c</columns>
    <columns>Workout_details__c</columns>
    <columns>Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>All GymEvent</label>
</ListView>